Feat: Showing how many adresses there are, and some formatting

--- a/src/app/feature/addresses/address-list/address-list.component.html
+++ b/src/app/feature/addresses/address-list/address-list.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="addresses$|async as addresses">There are {{addresses.length}} Adresses</div>
 <div class="addresses header">
   <div (click)="sort('line', sortDirection === 'asc'? 'desc': 'asc')" class="item">Line
     <fa-icon *ngIf="sortColumn === 'line' && sortDirection === 'asc' " [icon]="faSortDown"></fa-icon>
