--- a/src/app/feature/patients/patient/patient-edit/patient-edit.component.html
+++ b/src/app/feature/patients/patient/patient-edit/patient-edit.component.html
@@ -3,19 +3,19 @@
   <form [formGroup]="patientFormGroup">
     <div>
       <label for="firstName">First Name</label>
-      <input type="text" class="form-control" formControlName="firstName" id="firstName">
+      <input class="form-control" formControlName="firstName" id="firstName" type="text">
     </div>
     <div>
       <label for="lastName">Last Name</label>
-      <input type="text" class="form-control" formControlName="lastName" id="lastName">
+      <input class="form-control" formControlName="lastName" id="lastName" type="text">
     </div>
     <div>
       <label for="email">Email</label>
-      <input type="email" class="form-control" formControlName="email" id="email">
+      <input class="form-control" formControlName="email" id="email" type="email">
     </div>
     <div>
       <label for="gender">Gender</label>
-      <input type="text" class="form-control" formControlName="gender" id="gender">
+      <input class="form-control" formControlName="gender" id="gender" type="text">
     </div>
     <sse-button (click)="update()">Update</sse-button>
   </form>
