Feat: Patient edit is now prepopulated in a proper way

--- a/src/app/feature/patients/patient/patient-edit/patient-edit.component.html
+++ b/src/app/feature/patients/patient/patient-edit/patient-edit.component.html
@@ -3,11 +3,11 @@
   <form [formGroup]="patientFormGroup">
     <div>
       <label for="firstName">First Name</label>
-      <input class="form-control" formControlName="firstName" id="firstName" type="text">
+      <input class="form-control" formControlName="first_name" id="firstName" type="text">
     </div>
     <div>
       <label for="lastName">Last Name</label>
-      <input class="form-control" formControlName="lastName" id="lastName" type="text">
+      <input class="form-control" formControlName="last_name" id="lastName" type="text">
     </div>
     <div>
       <label for="email">Email</label>
